--- a/00-Python Object and Data Structure Basics/01-Numbers.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Numbers.ipynb
@@ -1,9 +1,77 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numbers and more in Python!\n",
+    "\n",
+    "In this lecture, we will learn about numbers in Python and how to use them.\n",
+    "\n",
+    "We'll learn about the following topics:\n",
+    "\n",
+    "    1.) Types of Numbers in Python\n",
+    "    2.) Basic Arithmetic\n",
+    "    3.) Differences between classic division and floor division\n",
+    "    4.) Object Assignment in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Types of numbers\n",
+    "\n",
+    "Python has various \"types\" of numbers (numeric literals). We'll mainly focus on integers and floating point numbers.\n",
+    "\n",
+    "Integers are just whole numbers, positive or negative. For example: 2 and -2 are examples of integers.\n",
+    "\n",
+    "Floating point numbers in Python are notable because they have a decimal point in them, or use an exponential (e) to define the number. For example 2.0 and -2.1 are examples of floating point numbers. 4E2 (4 times 10 to the power of 2) is also an example of a floating point number in Python.\n",
+    "\n",
+    "Here is a table of the two main types we will spend most of our time working with some examples:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "<tr>\n",
+    "    <th>Examples</th> \n",
+    "    <th>Number \"Type\"</th>\n",
+    "</tr>\n",
+    "\n",
+    "<tr>\n",
+    "    <td>1,2,-5,1000</td>\n",
+    "    <td>Integers</td> \n",
+    "</tr>\n",
+    "\n",
+    "<tr>\n",
+    "    <td>1.2,-0.5,2e2,3E2</td> \n",
+    "    <td>Floating-point numbers</td> \n",
+    "</tr>\n",
+    " </table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " \n",
+    " \n",
+    "Now let's start with some basic arithmetic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Arithmetic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc84419f-cdbe-4c97-8e2b-6744bf34daf9",
    "metadata": {},
    "outputs": [
     {
@@ -18,13 +86,13 @@
     }
    ],
    "source": [
+    "# Addition\n",
     "2+1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df651a3e-9e44-4b8c-beda-d3009a3c9e63",
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +107,13 @@
     }
    ],
    "source": [
+    "# Subtraction\n",
     "2-1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f95391b3-f869-4aee-8f7b-186f92d5c43d",
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +128,13 @@
     }
    ],
    "source": [
+    "# Multiplication\n",
     "2*2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8493481c-84fe-420f-8eef-5ed8436cd2e9",
    "metadata": {},
    "outputs": [
     {
@@ -81,27 +149,19 @@
     }
    ],
    "source": [
+    "# Division\n",
     "3/2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36dba06f-13e1-4cd8-931c-845d3997000b",
-   "metadata": {},
-   "source": [
-    "## Modulo or \"Mod\" Operator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b505c690-eb8b-4c46-b598-d014c8d5b561",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.75"
+       "1"
       ]
      },
      "execution_count": 5,
@@ -110,13 +170,29 @@
     }
    ],
    "source": [
-    "7/4"
+    "# Floor Division\n",
+    "7//4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Whoa! What just happened? Last time I checked, 7 divided by 4 equals 1.75 not 1!**\n",
+    "\n",
+    "The reason we get this result is because we are using \"*floor*\" division. The // operator (two forward slashes) truncates the decimal without rounding, and returns an integer result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**So what if we just want the remainder after division?**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47efb8a7-82a4-4907-b3b9-8d3d17cc6ac6",
    "metadata": {},
    "outputs": [
     {
@@ -131,55 +207,27 @@
     }
    ],
    "source": [
+    "# Modulo\n",
     "7%4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4 goes into 7 once, with a remainder of 3. The % operator returns the remainder after division."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic continued"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ed6b9c3c-a1d4-46ef-ba6e-43fca6985ac8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " 50 % 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c85c83e6-799c-4b38-a2c0-19bbcce6bc75",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "23 % 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f9693b45-d12d-4177-b1aa-fe7288953de0",
    "metadata": {},
    "outputs": [
     {
@@ -188,19 +236,40 @@
        "8"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 ** 3"
+    "# Powers\n",
+    "2**3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c7198a5c-f6b3-4252-9e2d-9c780751cee7",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can also do roots this way\n",
+    "4**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,19 +278,19 @@
        "105"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Order of Operations followed in Python\n",
     "2 + 10 * 10 + 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8b90fd58-703e-4610-9632-90dc4525b351",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,25 +299,53 @@
        "156"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(2 + 10) * (10 + 3)"
+    "# Can use parentheses to specify orders\n",
+    "(2+10) * (10+3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable Assignments\n",
+    "\n",
+    "Now that we've seen how to use numbers in Python as a calculator let's see how we can assign names and create variables.\n",
+    "\n",
+    "We use a single equals sign to assign labels to variables. Let's see a few examples of how we can do this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create an object called \"a\" and assign it the number 5\n",
+    "a = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now if I call *a* in my Python script, Python will treat it as the number 5."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7231a4a-7c35-411d-a630-104d6fd5a876",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.551115123125783e-17"
+       "10"
       ]
      },
      "execution_count": 12,
@@ -257,19 +354,163 @@
     }
    ],
    "source": [
-    "0.1 + 0.2 - 0.3"
+    "# Adding the objects\n",
+    "a+a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens on reassignment? Will Python let us write it over?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d71d92e9-4d20-41bf-8a53-a174634afb57",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reassignment\n",
+    "a = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes! Python allows you to write over assigned variable names. We can also use the variables themselves when doing the reassignment. Here is an example of what I mean:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use A to redefine A\n",
+    "a = a + a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check \n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The names you use when creating these labels need to follow a few rules:\n",
+    "\n",
+    "    1. Names can not start with a number.\n",
+    "    2. There can be no spaces in the name, use _ instead.\n",
+    "    3. Can't use any of these symbols :'\",<>/?|\\()!@#$%^&*~-+\n",
+    "    4. It's considered best practice (PEP8) that names are lowercase.\n",
+    "    5. Avoid using the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), \n",
+    "       or 'I' (uppercase letter eye) as single character variable names.\n",
+    "    6. Avoid using words that have special meaning in Python like \"list\" and \"str\"\n",
+    "\n",
+    "\n",
+    "Using variable names can be a very useful way to keep track of different variables in Python. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use object names to keep better track of what's going on in your code!\n",
+    "my_income = 100\n",
+    "\n",
+    "tax_rate = 0.1\n",
+    "\n",
+    "my_taxes = my_income*tax_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show my taxes!\n",
+    "my_taxes"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -289,5 +530,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
